* Asociacion de contexto a newsfeed
